--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,8 @@
     "database": "project2_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   }
 }
